# fsrk

./: .gitignore  CMakeLists.txt  README.md  package.xml
images/: cam_config_F.yaml  cam_down_camera_calib.yaml  down_vignetting_model_calib.yaml
include/fsf/sagast/: sagast.h
include/fsf/sagast/sagast_core/: AGAST_ALL.h
include/fsf/sagast/score/: sagast_score.hpp
include/fsrk/shape/: ellipse.h  rectrot.h
src/: calcCfgSagast.cpp  calcCfgSfreak.cpp  run_sagast.cpp  run_sfreak.cpp  sagast.cpp  test_ell.cpp  test_ell2.cpp
src/sagast/: sagast.cpp  sagast_src.cpp
src/sagast/offsets/: getOffsets.cpp
src/sagast/sagast_core/AGAST_12d/: AGAST_12d.cpp  OffsetsTable_12d.cpp
src/sagast/sagast_core/AGAST_12s/: AGAST_12s.cpp  OffsetsTable_12s.cpp
src/sagast/sagast_core/AGAST_8/: AGAST_8.cpp  OffsetsTable_8.cpp
src/sagast/sagast_core/OAST_16/: OAST_16.cpp  OffsetsTable_16.cpp
src/sagast/score/: sagast_score.cpp
src/sfreak/: freak.cpp  freak.hpp  sfreak.cpp  sfreak.hpp  sfreak_impl.cpp  sfreak_impl.h
src/shape/: circle.cpp  circle.h  cv_utils.cpp  cv_utils.h  ellipse.cpp  ellipse.h  rectrot.cpp
